--- a/admin.html
+++ b/admin.html
@@ -1,107 +1,103 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>관리자 페이지 - BookMap</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>북맵 — 관리자 페이지</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background: #fafafa; color:#333; }
-    h1 { text-align: center; }
-    #searchBox { display: block; margin: 20px auto; padding: 8px; width: 60%; border:1px solid #ccc; border-radius: 6px; }
-    .book-card {
-      border: 1px solid #ddd; border-radius: 10px; padding: 16px; margin: 12px auto;
-      background: white; max-width: 700px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
+    body { font-family: sans-serif; margin: 20px; background: #f8f9fa; }
+    h1 { text-align: center; margin-bottom: 20px; }
+
+    table { width: 100%; border-collapse: collapse; background: white; }
+    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; font-size: 14px; }
+    th { background: #f1f3f4; }
+
     .actions button {
-      margin-right: 8px; padding: 6px 12px; border: none; border-radius: 6px; cursor: pointer;
+      margin-right: 5px; padding: 4px 8px; font-size: 12px;
+      border: none; border-radius: 4px; cursor: pointer;
     }
-    .approve { background: #4CAF50; color: white; }
-    .reject { background: #f44336; color: white; }
-    .edit { background: #2196F3; color: white; }
-    #loading {
-      text-align: center; margin: 40px auto; color: #555;
-    }
-    .spinner {
-      width: 40px; height: 40px;
-      border: 4px solid #e5e7eb;
-      border-top: 4px solid #1a73e8;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      margin: 0 auto 10px;
-    }
-    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-    .hidden { display: none; }
+    .approve { background: #28a745; color: white; }
+    .reject { background: #dc3545; color: white; }
+
+    .loading { text-align: center; margin: 20px; display: none; }
+    .nav { text-align: center; margin-top: 20px; }
+    .nav a { margin: 0 10px; text-decoration: none; color: #1a73e8; font-weight: bold; }
   </style>
 </head>
 <body>
-  <h1>📚 관리자 페이지</h1>
-  <input type="text" id="searchBox" placeholder="제목, 저자, 출판사, 등록자 검색..." />
-  <div id="loading"><div class="spinner"></div><p>로딩 중입니다...</p></div>
-  <div id="bookList"></div>
+  <h1>🔑 관리자 페이지</h1>
+  <div id="loading" class="loading">📡 불러오는 중...</div>
+  <table id="bookTable">
+    <thead>
+      <tr>
+        <th>제목</th>
+        <th>저자</th>
+        <th>출판사</th>
+        <th>상태</th>
+        <th>관리</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <div class="nav">
+    <a href="index.html">🏠 홈</a>
+    <a href="book.html">📚 도서 리스트</a>
+  </div>
+
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbygL5W_rVDTMkPIjLiSjDVN5nxRaZgHTIW3vbJgTgOL_Z_IwLF4k97VEd1bQNfxqAs1_A/exec";
+    const loading = document.getElementById("loading");
+    const bookTable = document.querySelector("#bookTable tbody");
 
-    async function loadBooks() {
+    async function fetchBooks() {
+      loading.style.display = "block";
       try {
-        const res = await fetch(`${API_URL}?action=admin`);
+        const res = await fetch(API_URL + "?action=admin", { credentials: "include" });
         const data = await res.json();
-        document.getElementById("loading").classList.add("hidden");
 
         if (data.error) {
-          document.body.innerHTML = `<h2 style='color:red;text-align:center'>${data.error}</h2>`;
+          alert("⚠️ 접근 권한이 없습니다: " + data.error);
           return;
         }
+
         renderBooks(data);
       } catch (err) {
-        document.body.innerHTML = "<h2 style='color:red;text-align:center'>관리자 권한이 필요합니다. (bookmapwep@gmail.com)</h2>";
+        alert("❌ 관리자 데이터 불러오기 실패");
+      } finally {
+        loading.style.display = "none";
       }
     }
 
     function renderBooks(books) {
-      const list = document.getElementById("bookList");
-      list.innerHTML = "";
-      const searchBox = document.getElementById("searchBox");
-
-      searchBox.addEventListener("input", () => {
-        const keyword = searchBox.value.toLowerCase();
-        const filtered = books.filter(b =>
-          (b.title || "").toLowerCase().includes(keyword) ||
-          (b.author || "").toLowerCase().includes(keyword) ||
-          (b.publisher || "").toLowerCase().includes(keyword) ||
-          (b.submitter || "").toLowerCase().includes(keyword)
-        );
-        render(filtered);
+      bookTable.innerHTML = "";
+      books.forEach((book, index) => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${book.title || ""}</td>
+          <td>${book.author || ""}</td>
+          <td>${book.publisher || ""}</td>
+          <td>${book.status || "대기중"}</td>
+          <td class="actions">
+            <button class="approve" onclick="updateStatus(${index+1}, '승인')">승인</button>
+            <button class="reject" onclick="updateStatus(${index+1}, '반려')">반려</button>
+          </td>
+        `;
+        bookTable.appendChild(tr);
       });
-
-      function render(data) {
-        list.innerHTML = "";
-        data.forEach((b, idx) => {
-          const card = document.createElement("div");
-          card.className = "book-card";
-          card.innerHTML = `
-            <h3>${b.title || ""}</h3>
-            <p><b>저자:</b> ${b.author || ""} | <b>출판사:</b> ${b.publisher || ""}</p>
-            <p><b>번역:</b> ${b.translator || ""} | <b>등록자:</b> ${b.submitter || ""}</p>
-            <p><b>상태:</b> ${b.status || ""}</p>
-            <div class="actions">
-              <button class="approve" onclick="updateStatus(${idx}, '승인')">승인</button>
-              <button class="reject" onclick="updateStatus(${idx}, '보류')">보류</button>
-              <button class="edit" onclick="alert('편집 기능은 추후 구현 예정')">편집</button>
-            </div>
-          `;
-          list.appendChild(card);
-        });
-      }
-      render(books);
     }
 
     async function updateStatus(rowIndex, status) {
-      await fetch(`${API_URL}?action=update&rowIndex=${rowIndex}&status=${status}`);
-      alert("상태가 업데이트되었습니다.");
-      loadBooks();
+      try {
+        await fetch(API_URL + `?action=update&rowIndex=${rowIndex}&status=${status}`, { credentials: "include" });
+        alert("✅ 상태가 업데이트 되었습니다.");
+        fetchBooks();
+      } catch (err) {
+        alert("❌ 상태 변경 실패");
+      }
     }
 
-    loadBooks();
+    fetchBooks();
   </script>
 </body>
 </html>
