--- a/index.html
+++ b/index.html
@@ -3,33 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>북맵 — 메인</title>
+  <title>북맵 — 홈</title>
   <style>
-    body { font-family: sans-serif; margin: 20px; background: #fafafa; color: #333; text-align: center; }
-    h1 { font-size: 24px; margin-bottom: 12px; }
-    p { font-size: 15px; color: #555; margin-bottom: 20px; }
-
-    .btn {
-      display: inline-block; margin: 10px; padding: 12px 20px;
-      border: none; border-radius: 8px;
-      background: #1a73e8; color: white;
-      font-size: 15px; cursor: pointer; text-decoration: none;
+    body {
+      font-family: "Noto Sans KR", sans-serif;
+      margin: 0;
+      background: linear-gradient(135deg,#f9fafb,#f3f4f6);
+      color: #1f2937;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
-    .btn:hover { background: #1558b0; }
-
-    footer { margin-top: 40px; font-size: 13px; color: #777; }
+    header {
+      text-align: center;
+      padding: 50px 20px 30px;
+    }
+    header h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+    header p {
+      font-size: 16px;
+      color: #555;
+      max-width: 600px;
+      margin: 0 auto;
+      line-height: 1.6;
+    }
+    main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 30px 20px;
+    }
+    .buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 40px;
+    }
+    .buttons a {
+      display: inline-block;
+      padding: 14px 28px;
+      border-radius: 10px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 16px;
+      color: white;
+      transition: transform 0.2s, background 0.3s;
+    }
+    .register { background: #16a34a; } /* green */
+    .list { background: #1d4ed8; }     /* blue */
+    .admin { background: #7c3aed; }    /* purple */
+    .buttons a:hover {
+      transform: translateY(-3px);
+      opacity: 0.9;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      font-size: 13px;
+      color: #777;
+      border-top: 1px solid #e5e7eb;
+      background: #f9fafb;
+    }
   </style>
 </head>
 <body>
-  <h1>📖 북맵(BookMap)</h1>
-  <p>이 사이트는 좋은 도서를 함께 기록하고 공유하기 위한 서비스입니다.<br>
-     누구나 책을 등록할 수 있고, 관리자의 승인 후 목록에 반영됩니다.</p>
+  <header>
+    <h1>📚 북맵 (BookMap)</h1>
+    <p>
+      북맵은 신학·인문학 중심의 도서 아카이브 서비스입니다.<br>
+      독자와 연구자, 신학생들이 함께 유용한 도서를 공유하고 탐색할 수 있도록 돕습니다.
+    </p>
+  </header>
 
-  <div>
-    <a href="form.html" class="btn">✍️ 도서 등록</a>
-    <a href="book.html" class="btn">📚 도서 리스트</a>
-    <a href="admin.html" class="btn">🛠 관리자 전용</a>
-  </div>
+  <main>
+    <div class="buttons">
+      <a href="form.html" class="register">➕ 도서 등록</a>
+      <a href="book.html" class="list">📖 도서 리스트</a>
+      <a href="admin.html" class="admin">⚙️ 관리자</a>
+    </div>
+  </main>
 
   <footer>
     &copy; 2025 BookMap. All rights reserved.
