--- a/form.html
+++ b/form.html
@@ -1,120 +1,49 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>도서 등록</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>BookMap — 도서 등록</title>
   <style>
-    body { font-family: sans-serif; margin: 20px; background: #fafafa; color: #333; }
-    h1 { text-align: center; }
-
-    form {
-      max-width: 600px; margin: 0 auto;
-      background: white; padding: 20px; border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    body { font-family: system-ui, sans-serif; margin: 20px; background: #fafafa; }
+    h1 { font-size: 22px; }
+    form { display: flex; flex-direction: column; gap: 12px; max-width: 400px; }
+    label { font-weight: bold; }
+    input, button {
+      padding: 8px; border: 1px solid #ccc; border-radius: 6px;
     }
-    label { display: block; margin-top: 12px; font-weight: bold; }
-    input, textarea {
-      width: 100%; padding: 10px; margin-top: 6px;
-      border: 1px solid #ccc; border-radius: 6px;
-      font-size: 14px;
+    button {
+      background: #1a73e8; color: white; font-weight: bold; cursor: pointer;
     }
-    textarea { resize: vertical; }
-
-    .btn {
-      margin-top: 20px; padding: 12px; border: none;
-      border-radius: 8px; background: #1a73e8; color: white;
-      cursor: pointer; font-size: 15px; width: 100%;
-    }
-    .btn:disabled { background: #aaa; cursor: not-allowed; }
-
-    .nav { margin-top: 20px; text-align: center; }
-    .nav a { margin: 0 10px; text-decoration: none; color: #1a73e8; font-weight: bold; }
-
-    .loading { text-align: center; margin: 20px 0; display: none; color: #555; }
+    button:hover { background: #1558c0; }
   </style>
 </head>
 <body>
-  <h1>✍️ 도서 등록</h1>
-
+  <h1>도서 등록</h1>
   <form id="bookForm">
-    <label>도서명</label>
-    <input type="text" name="title" required>
-
-    <label>저자</label>
-    <input type="text" name="author">
-
-    <label>번역자</label>
-    <input type="text" name="translator">
-
-    <label>출판사</label>
-    <input type="text" name="publisher">
-
-    <label>카테고리</label>
-    <input type="text" name="category" placeholder="예: 소설, 자기계발">
-
-    <label>레벨</label>
-    <input type="text" name="level" placeholder="입문, 초급, 중급, 고급, 전문 중 택1">
-
-    <label>추천 이유</label>
-    <textarea name="reason" rows="3"></textarea>
-
-    <label>알라딘 링크</label>
-    <input type="url" name="link.aladin">
-
-    <label>교보문고 링크</label>
-    <input type="url" name="link.kyobo">
-
-    <label>YES24 링크</label>
-    <input type="url" name="link.yes24">
-
-    <label>표지 이미지 URL</label>
-    <input type="url" name="cover">
-
-    <label>등록자 이름</label>
-    <input type="text" name="submitter">
-
-    <label>이메일</label>
-    <input type="email" name="email">
-
-    <button type="submit" id="submitBtn" class="btn">등록하기</button>
+    <label>제목 <input type="text" name="title" required /></label>
+    <label>저자 <input type="text" name="author" required /></label>
+    <label>출판사 <input type="text" name="publisher" required /></label>
+    <button type="submit">등록하기</button>
   </form>
-
-  <div id="loading" class="loading">📡 등록 중입니다...</div>
-
-  <div class="nav">
-    <a href="index.html">🏠 홈</a>
-    <a href="book.html">📚 도서 리스트</a>
-  </div>
 
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbygL5W_rVDTMkPIjLiSjDVN5nxRaZgHTIW3vbJgTgOL_Z_IwLF4k97VEd1bQNfxqAs1_A/exec";
 
     document.getElementById("bookForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-      const btn = document.getElementById("submitBtn");
-      const loading = document.getElementById("loading");
-
-      btn.disabled = true;
-      loading.style.display = "block";
-
       const formData = new FormData(e.target);
-      const data = {};
-      formData.forEach((value, key) => data[key] = value);
+      const params = new URLSearchParams();
+      formData.forEach((v, k) => params.append(k, v));
+      params.append("action", "add");
 
-      try {
-        await fetch(API_URL, {
-          method: "POST",
-          body: JSON.stringify(data),
-        });
-
-        alert("도서가 등록 요청되었습니다! (관리자 승인 후 반영됩니다)");
-        window.location.href = "book.html";
-      } catch (err) {
-        alert("❌ 오류가 발생했습니다. 다시 시도해주세요.");
-      } finally {
-        btn.disabled = false;
-        loading.style.display = "none";
+      const res = await fetch(API_URL + "?" + params.toString());
+      const result = await res.json();
+      if (result.success) {
+        alert("✅ 도서가 등록되었습니다! (자동 승인)");
+        e.target.reset();
+      } else {
+        alert("❌ 등록 실패: " + (result.error || "알 수 없는 오류"));
       }
     });
   </script>
