--- a/index.html
+++ b/index.html
@@ -5,86 +5,28 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>북맵 — 메인</title>
   <style>
-    body {
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f9fafb;
-      color: #1f2937;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-    }
-    header {
-      background: #1a73e8;
-      color: white;
-      width: 100%;
-      padding: 20px;
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold;
-    }
-    main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 20px;
-    }
-    main p {
-      font-size: 16px;
-      color: #374151;
-      margin-bottom: 30px;
-      max-width: 600px;
-      line-height: 1.6;
-    }
-    .buttons {
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-      width: 220px;
-    }
+    body { font-family: sans-serif; margin: 0; background: #fafafa; }
+    header { background: #1a73e8; color: white; padding: 15px; text-align: center; font-size: 20px; font-weight: bold; }
+    main { display: flex; flex-direction: column; align-items: center; justify-content: center; height: calc(100vh - 120px); }
+    main p { font-size: 16px; color: #444; margin-bottom: 25px; text-align: center; }
+    .buttons { display: flex; gap: 15px; }
     .buttons a {
-      display: block;
-      padding: 14px;
-      text-align: center;
-      background: white;
-      color: #1a73e8;
-      border: 2px solid #1a73e8;
-      border-radius: 10px;
-      font-size: 16px;
-      font-weight: bold;
-      text-decoration: none;
-      transition: all 0.2s;
+      display: inline-block; padding: 12px 20px; border: 2px solid #1a73e8; border-radius: 8px;
+      background: white; color: #1a73e8; text-decoration: none; font-weight: bold; transition: 0.2s;
     }
-    .buttons a:hover {
-      background: #1a73e8;
-      color: white;
-    }
-    footer {
-      padding: 15px;
-      font-size: 13px;
-      color: #6b7280;
-      text-align: center;
-    }
+    .buttons a:hover { background: #1a73e8; color: white; }
+    footer { padding: 12px; text-align: center; font-size: 13px; color: #666; }
   </style>
 </head>
 <body>
   <header>📚 북맵 (BookMap)</header>
   <main>
-    <p>
-      북맵은 독서와 학문을 사랑하는 사람들을 위한 도서 공유 플랫폼입니다.<br>
-      원하는 책을 등록하고, 분야별/난이도별로 정리된 도서를 살펴보세요.<br>
-      새로운 배움과 만남을 이어주는 작은 길잡이가 되겠습니다.
-    </p>
+    <p>도서를 등록하거나 분야별로 분류된 리스트를 확인해보세요.</p>
     <div class="buttons">
       <a href="form.html">✍️ 도서 등록</a>
       <a href="book.html">📖 도서 리스트</a>
     </div>
   </main>
-  <footer>© 2025 BookMap — All rights reserved.</footer>
+  <footer>© 2025 BookMap</footer>
 </body>
 </html>
